[gd_scene load_steps=2 format=3 uid="uid://s7iqd4d70g3r"]

[ext_resource type="Script" uid="uid://c0sv7wvnqfovi" path="res://Cargo/cargo_controller.gd" id="1_pjd6e"]

[node name="cargo_controller" type="Node"]
script = ExtResource("1_pjd6e")

[node name="day_tick" type="Timer" parent="."]

[node name="month_tick" type="Timer" parent="."]
wait_time = 15.0

[connection signal="timeout" from="day_tick" to="." method="_on_day_tick_timeout"]
[connection signal="timeout" from="month_tick" to="." method="_on_month_tick_timeout"]
